# ekg_agent

./: .dockerignore  .env.example  .gitignore  ADD_SECOND_DOMAIN.md  DEPLOYMENT_GCLOUD.md  Dockerfile  Dockerfile.txt  EKG_Agent_Postman_Collection.json  GCLOUD_DEPLOYMENT.md  INTEGRATION_GUIDE.md  MULTI_DOMAIN_IMPLEMENTATION.md  MULTI_DOMAIN_SUCCESS.md  MULTI_TENANT_DESIGN.md  Makefile.txt  READINESS_ASSESSMENT.md  README.md  SECRETS_GUIDE.md  TESTING_SUMMARY.md  THIRD_PARTY_TESTING.md  add_kg_path_vars.sh  check_production_env.sh  cloudbuild.yaml  create_and_upload_kg.sh  debug_structured_input.py  demo_conversational.py  demo_response_structure.py  extract_production_logs.sh  find_kg_files.sh  master_import.ipynb  pyproject.toml  run_local_with_gcs.sh  run_local_with_service_account.sh  run_server.sh  set_kg_paths.sh  setup_master_kg.sh  show_logs_on_screen.sh  start_production.py  test_concise_direct.py  test_concise_mode.py  test_conversational_api.py  (+7 more)
agents/: ekg_agent.py
agents/tools/: kg_extraction.py  structured_answer.py  vector_extraction.py
api/: domains.py  main.py  schemas.py  settings.py  task_store.py
api/static/css/: styles.css
api/templates/: admin_dashboard.html  layout.html
data/kg/: apf_kg.json  wealth_product_kg.json
docs/: kg_vector_response_v2.py
ekg_core/: __init__.py  core.py  v2_workflow.py
examples/: curl_examples.sh
scripts/: add_domain.py  inspect_kg.py
tests/: test_api.py  test_kg_integration.py  test_multi_domain.py
