[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "ekg-agent"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "openai>=1.45",
  "networkx>=3.2",
  "pydantic>=2.7",
  "rapidfuzz>=3.9",
]

[tool.hatch.build.targets.wheel]
packages = ["ekg_core", "agents", "api"]
